--- a/src/test/resources/template.html
+++ b/src/test/resources/template.html
@@ -1,51 +1,43 @@
 <html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" media="all"  th:href="@{style.css}" />
-</head>
-<body>
 
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" media="all"  th:href="@{style.css}" />
+    </head>
 
-<div class='header' th:include="header::header"></div>
+    <body>
 
-<div th:include="letterhead::letterhead"></div>
+        <div class='header' th:include="header::header"></div>
 
+        <div th:include="letterhead::letterhead"></div>
 
-<h1>YOUR EXAMPLE THYMELEAF PDF</h1>
+        <h1>YOUR EXAMPLE THYMELEAF PDF</h1>
 
-<div>
-    <p>Dear [[${data.getFirstname()}]] [[${data.getLastname()}]],</p>
-</div>
+        <p>Dear [[${data.getFirstname()}]] [[${data.getLastname()}]],</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu erat quis urna fringilla faucibus. Fusce vitae est sed sapien laoreet lacinia maximus quis turpis. Aliquam auctor diam a felis sodales gravida.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu erat quis urna fringilla faucibus. Fusce vitae est sed sapien laoreet lacinia maximus quis turpis. Aliquam auctor diam a felis sodales gravida.</p>
 
-<p>Quisque mauris magna, vulputate eget feugiat ut, molestie posuere urna. Etiam volutpat hendrerit efficitur. Vestibulum condimentum volutpat arcu porttitor condimentum. Aliquam vestibulum pulvinar enim sit amet fermentum. Vivamus vulputate, enim id rutrum dictum, enim nibh fermentum mi, vel varius tortor risus at enim. Aliquam scelerisque mi metus, non imperdiet risus interdum eu. Nullam pretium nulla ante, vitae tincidunt neque suscipit in. Nam dapibus iaculis nisl, eget dictum lectus dictum vitae. Ut malesuada justo ligula, sed rhoncus nisl gravida eu. Fusce nulla mi, suscipit at elit ullamcorper, aliquet vehicula odio. Ut molestie ac purus vitae porttitor. Curabitur eget euismod enim, venenatis posuere eros. Ut vel erat in odio varius eleifend. Quisque aliquam odio turpis, sed posuere purus ullamcorper eu.</p>
+        <p>Quisque mauris magna, vulputate eget feugiat ut, molestie posuere urna. Etiam volutpat hendrerit efficitur. Vestibulum condimentum volutpat arcu porttitor condimentum. Aliquam vestibulum pulvinar enim sit amet fermentum. Vivamus vulputate, enim id rutrum dictum, enim nibh fermentum mi, vel varius tortor risus at enim. Aliquam scelerisque mi metus, non imperdiet risus interdum eu. Nullam pretium nulla ante, vitae tincidunt neque suscipit in. Nam dapibus iaculis nisl, eget dictum lectus dictum vitae. Ut malesuada justo ligula, sed rhoncus nisl gravida eu. Fusce nulla mi, suscipit at elit ullamcorper, aliquet vehicula odio. Ut molestie ac purus vitae porttitor. Curabitur eget euismod enim, venenatis posuere eros. Ut vel erat in odio varius eleifend. Quisque aliquam odio turpis, sed posuere purus ullamcorper eu.</p>
 
-<p><b>Best regards,</b></p>
-<p>Thymeleaf Example Project</p>
+        <p><b>Best regards,</b></p>
 
-<p><b>You find more information on the second page.</b></p>
+        <p>Thymeleaf Example Project</p>
 
-<div class='footer' th:include="footer::footer"></div>
-<div class="next-page">
+        <p><b>You find more information on the second page.</b></p>
 
-<h2>More Information</h2>
+        <div class='footer' th:include="footer::footer"></div>
 
+        <div class="next-page">
 
-<p>
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-</p>
-</div>
-<div class='footer' th:include="footer::footer"></div>
+            <h2>More Information</h2>
 
-</body>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </div>
+
+        <div class='footer' th:include="footer::footer"></div>
+
+    </body>
 </html>
