Use normal HTML definition for CSS instead of Thymeleaf variable

--- a/src/test/resources/template.html
+++ b/src/test/resources/template.html
@@ -2,7 +2,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" media="all"  th:href="@{style.css}" />
+        <link rel="stylesheet" type="text/css" media="all"  href="style.css" />
     </head>
 
     <body>
