Update gradle config; Update some Java import; Improved HTML Code Alignment; Fix font path import;

--- a/src/test/resources/header.html
+++ b/src/test/resources/header.html
@@ -2,7 +2,7 @@
     <table>
         <tr>
             <td><span class="barcode">*TEST BARCODE*</span></td>
-            <td class="right"><img class="logo" src="logo.png"></td>
+            <td class="right"><img class="logo" src="logo.png" alt="logo"></td>
         </tr>
     </table>
 </div>
